Layout: increased hero padding-top on mobile for better clearance from fixed header

--- a/style.css
+++ b/style.css
@@ -2597,7 +2597,7 @@ main {
     }
 
     .hero {
-        padding-top: 60px !important;
+        padding-top: 90px !important;
     }
 
     .hero__content {
@@ -2704,7 +2704,7 @@ main {
     }
 
     .hero {
-        padding-top: 60px !important;
+        padding-top: 90px !important;
     }
 
     .product-title {
